fix alignment of search page pagination, remove box shadows from wide headers, fix random border issues on header images

--- a/web/app/themes/cfs/assets/styles/components/_pagination.scss
+++ b/web/app/themes/cfs/assets/styles/components/_pagination.scss
@@ -25,6 +25,7 @@
     }
   }
 
+  // Mobile only styles
   @include max-screen($breakpoint-md) {
     border-left: mobile-grid(2) solid $black;
     border-right: mobile-grid(2) solid $black;
@@ -40,7 +41,8 @@
       color: $red;
     }
     ul {
-      margin-left: columns(9, 14);
+      margin-left: columns(8, 14);
+      padding-left: $gutter;
     }
   }
 }
