--- a/web/app/themes/cfs/assets/styles/pages/_home.scss
+++ b/web/app/themes/cfs/assets/styles/pages/_home.scss
@@ -4,6 +4,7 @@
     height: auto;
   }
   .page-intro {
+    border: none;
     color: $white;
     padding: 200px mobile-grid(2) mobile-grid(5) mobile-grid(5);
   }
